[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qgate-sim"
version = "0.1.0"
description = "Quantum gate simulation with C-extensions and Bloch sphere visualization"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy" # Often needed for quantum state math
]

[tool.setuptools]
packages = ["qgate_lib"]